<resources>
    <string name="app_name">MC-Trainer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">email</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="sign_in">Sign In</string>
    <string name="to_sign_up">to Sign Up</string>
    <string name="sign_up_to_create_a_new_account">Sign up to create a new account</string>
    <string name="name">name</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="title_activity_main1">MainActivity1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_setting">settings</string>
    <string name="log_out">log out</string>
</resources>