<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_gravity="center_horizontal"
    android:padding="20dp"
    tools:context=".userFragment.SignUpFragment">


    <TextView
        android:id="@+id/logging_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_centerHorizontal="true"
        style = "@style/TextAppearance.MaterialComponents.Headline3"/>

    <TextView
        android:id="@+id/little_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up_to_create_a_new_account"
        tools:layout_editor_absoluteY="98dp"
        android:layout_below="@+id/logging_Text"
        style = "@style/TextAppearance.MaterialComponents.Caption" />


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/name_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/email_wrapper"
        app:startIconDrawable="@drawable/ic_person"
        app:helperTextTextColor="@color/red"
        android:layout_marginBottom="20dp"
        android:hint="@string/name"
        android:padding="0dp">
        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/email_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password_wrapper"
        app:endIconMode="custom"
        android:hint="@string/email"
        app:helperTextTextColor="@color/red"
        app:startIconDrawable="@drawable/ic_email"
        android:layout_marginBottom="20dp">
        <EditText
            android:id="@+id/new_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/password_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:helperTextTextColor="@color/red"
        android:hint="@string/password"
        app:startIconDrawable="@drawable/ic_password"
        app:passwordToggleEnabled="true">

        <EditText
            android:inputType="textPassword"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/confirm_password_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="custom"
        app:helperTextTextColor="@color/red"
        app:startIconDrawable="@drawable/ic_spellcheck"
        android:hint="@string/confirm_password"
        android:layout_below="@+id/password_wrapper"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            app:passwordToggleEnabled="true"
            android:textSize="20dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign up"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/confirm_password_wrapper" />

    <Button
        android:id="@+id/prev_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up"
        android:layout_marginTop="20dp"
        android:layout_alignParentStart="true"
        android:text="Back to Sign In" />

</RelativeLayout>